[gd_scene load_steps=19 format=3 uid="uid://bn6lyoe2h87ik"]

[ext_resource type="Script" uid="uid://npy3416g250l" path="res://Code/UI.gd" id="1_w371h"]
[ext_resource type="Script" uid="uid://pnj23tucjk8v" path="res://Code/HealthUI.gd" id="2_nxvpl"]
[ext_resource type="Texture2D" uid="uid://bdfttcgbpk2at" path="res://Assets/SVGS/Shrimp health icon/Shrimp icon background.svg" id="3_j04uc"]
[ext_resource type="Texture2D" uid="uid://dhaaxadr67ngj" path="res://Assets/SVGS/Shrimp health icon/Shrimp icon part 1.svg" id="4_vqx31"]
[ext_resource type="Texture2D" uid="uid://cc5rrteke73qv" path="res://Assets/SVGS/Shrimp health icon/Shrimp icon part 2.svg" id="5_b1goy"]
[ext_resource type="Texture2D" uid="uid://735ub0i4wslp" path="res://Assets/SVGS/Shrimp health icon/Shrimp icon part 3.svg" id="6_n04ve"]
[ext_resource type="Texture2D" uid="uid://c3yf23kg5v7ph" path="res://Assets/SVGS/Shrimp health icon/Shrimp icon part 4.svg" id="7_wi7yl"]
[ext_resource type="Texture2D" uid="uid://dmwex4hesoj8l" path="res://Assets/SVGS/Shrimp health icon/Shrimp icon part 5.svg" id="8_5q4fb"]
[ext_resource type="Texture2D" uid="uid://c40epprtpa1m5" path="res://Assets/SVGS/Shrimp health icon/Shrimp icon part 6.svg" id="9_mqm5i"]
[ext_resource type="Texture2D" uid="uid://di3xd4ym8buey" path="res://Assets/SVGS/Shrimp health icon/Shrimp icon part 7.svg" id="10_jnovg"]
[ext_resource type="Texture2D" uid="uid://dx3kp8urt8op8" path="res://Assets/SVGS/Bubble ammo icon/Bubble ammo icon.svg" id="11_vqx31"]
[ext_resource type="Script" uid="uid://bghxmqchc17kv" path="res://Code/BubbleUI.gd" id="11_wi7yl"]
[ext_resource type="FontFile" uid="uid://dmg12v5yogku3" path="res://Assets/Fonts/Bubblegum.ttf" id="12_n04ve"]
[ext_resource type="Texture2D" uid="uid://cl3whua66fqhv" path="res://Assets/SVGS/Plankton icon/Plankton icon.svg" id="13_wi7yl"]
[ext_resource type="Script" uid="uid://cfsd5bk0e14id" path="res://Code/PlanktonUI.gd" id="14_5q4fb"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_13dyv"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_5q4fb"]

[sub_resource type="LabelSettings" id="LabelSettings_mqm5i"]
font = ExtResource("12_n04ve")
font_size = 56

[node name="UI" type="CanvasLayer"]
script = ExtResource("1_w371h")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="HealthUI" type="PanelContainer" parent="Control"]
unique_name_in_owner = true
custom_minimum_size = Vector2(100, 100)
layout_mode = 0
offset_left = 6.0
offset_top = 39.0
offset_right = 156.0
offset_bottom = 189.0
theme_override_styles/panel = SubResource("StyleBoxEmpty_13dyv")
script = ExtResource("2_nxvpl")

[node name="Background" type="TextureRect" parent="Control/HealthUI"]
layout_mode = 2
texture = ExtResource("3_j04uc")
expand_mode = 1
stretch_mode = 4

[node name="Part1" type="TextureRect" parent="Control/HealthUI"]
unique_name_in_owner = true
layout_mode = 2
texture = ExtResource("4_vqx31")
expand_mode = 1
stretch_mode = 4

[node name="Part2" type="TextureRect" parent="Control/HealthUI"]
unique_name_in_owner = true
layout_mode = 2
texture = ExtResource("5_b1goy")
expand_mode = 1
stretch_mode = 4

[node name="Part3" type="TextureRect" parent="Control/HealthUI"]
unique_name_in_owner = true
layout_mode = 2
texture = ExtResource("6_n04ve")
expand_mode = 1
stretch_mode = 4

[node name="Part4" type="TextureRect" parent="Control/HealthUI"]
unique_name_in_owner = true
layout_mode = 2
texture = ExtResource("7_wi7yl")
expand_mode = 1
stretch_mode = 4

[node name="Part5" type="TextureRect" parent="Control/HealthUI"]
unique_name_in_owner = true
layout_mode = 2
texture = ExtResource("8_5q4fb")
expand_mode = 1
stretch_mode = 4

[node name="Part6" type="TextureRect" parent="Control/HealthUI"]
unique_name_in_owner = true
layout_mode = 2
texture = ExtResource("9_mqm5i")
expand_mode = 1
stretch_mode = 4

[node name="Part7" type="TextureRect" parent="Control/HealthUI"]
unique_name_in_owner = true
layout_mode = 2
texture = ExtResource("10_jnovg")
expand_mode = 1
stretch_mode = 4

[node name="VBoxContainer" type="VBoxContainer" parent="Control"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -121.0
offset_bottom = 184.0
grow_horizontal = 0

[node name="BubbleUI" type="PanelContainer" parent="Control/VBoxContainer" node_paths=PackedStringArray("bubble_label")]
unique_name_in_owner = true
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxEmpty_5q4fb")
script = ExtResource("11_wi7yl")
bubble_label = NodePath("HBoxContainer/BubbleLabel")

[node name="HBoxContainer" type="HBoxContainer" parent="Control/VBoxContainer/BubbleUI"]
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="Control/VBoxContainer/BubbleUI/HBoxContainer"]
custom_minimum_size = Vector2(50, 90)
layout_mode = 2
texture = ExtResource("11_vqx31")
expand_mode = 1
stretch_mode = 4

[node name="BubbleLabel" type="Label" parent="Control/VBoxContainer/BubbleUI/HBoxContainer"]
layout_mode = 2
text = ": X"
label_settings = SubResource("LabelSettings_mqm5i")

[node name="PlanktonUI" type="PanelContainer" parent="Control/VBoxContainer" node_paths=PackedStringArray("plankton_label")]
unique_name_in_owner = true
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxEmpty_5q4fb")
script = ExtResource("14_5q4fb")
plankton_label = NodePath("HBoxContainer/PlanktonLabel")

[node name="HBoxContainer" type="HBoxContainer" parent="Control/VBoxContainer/PlanktonUI"]
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="Control/VBoxContainer/PlanktonUI/HBoxContainer"]
custom_minimum_size = Vector2(50, 90)
layout_mode = 2
texture = ExtResource("13_wi7yl")
expand_mode = 1
stretch_mode = 4

[node name="PlanktonLabel" type="Label" parent="Control/VBoxContainer/PlanktonUI/HBoxContainer"]
layout_mode = 2
text = ": X"
label_settings = SubResource("LabelSettings_mqm5i")
